# Zenalyze

./: .gitignore  README.md  pyproject.toml
docs/: README.md  api-usage.md
src/zenalyze/: __init__.py  _quick_obj.py  data.py  prompt.py  zenalyze.py
src/zenalyze/chat/: __init__.py  buddy_llm.py  llm.py  summarizer_llm.py
src/zenalyze/data/: __init__.py  data_base_class.py
src/zenalyze/data/pandas/: data.py  metadata.py
src/zenalyze/data/spark/: data.py  metadata.py
