[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "zenalyze"
version = "0.1.0"
description = "Package to use/integrate LLM to analyze data."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "numpy==2.3.3",
    "pandas==2.3.3",
    "matplotlib==3.10.7",
    "requests==2.32.5"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools]
include-package-data = true